Modifies Rodinia source code of Backprop to execute in a specific GPU

--- a/src/rodinia/cuda/backprop/Makefile
+++ b/src/rodinia/cuda/backprop/Makefile
@@ -1,4 +1,5 @@
 include ../../common/make.config
+include ../../common/devId.config
 
 # C compiler
 CC = gcc
@@ -12,7 +13,7 @@ NVCC_FLAGS = -I$(CUDA_DIR)/include
 ifeq ($(dbg),1)
 	NVCC_FLAGS += -g -O0
 else
-	NVCC_FLAGS += -O2
+	NVCC_FLAGS += -O2 -ccbin gcc-4.8 
 endif
 
 # 'make emu=1' compiles the CUDA kernels for emulation
