--- a/src/rodinia/cuda/hotspot3D/Makefile
+++ b/src/rodinia/cuda/hotspot3D/Makefile
@@ -1,4 +1,4 @@
-include ~/rodinia_3.0/common/make.config
+include ../../common/make.config
 
 CC := $(CUDA_DIR)/bin/nvcc
 
@@ -10,7 +10,7 @@ EXE = 3D
 
 OUTPUT = *.out
 
-FLAGS = -g -G #-arch sm_20 --ptxas-options=-v
+FLAGS = -g -G -arch sm_35 -ccbin gcc-4.8 -lm 
 release: $(SRC)
 	$(CC) $(KERNEL_DIM) $(FLAGS) $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
 
