--- a/src/rodinia/cuda/gaussian/Makefile
+++ b/src/rodinia/cuda/gaussian/Makefile
@@ -1,4 +1,5 @@
 include ../../common/make.config
+include ../../common/init.config
 
 CC := $(CUDA_DIR)/bin/nvcc
 
@@ -8,7 +9,7 @@ SRC = gaussian.cu
 EXE = gaussian
 
 release: $(SRC)
-	$(CC) $(KERNEL_DIM) $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
+	$(CC) $(devId) $(FLAGSpecial) $(FLAGArch) $(KERNEL_DIM) $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
 
 clean:
 	rm gaussian
