--- a/src/rodinia/cuda/heartwall/Makefile
+++ b/src/rodinia/cuda/heartwall/Makefile
@@ -1,3 +1,4 @@
+include ../../common/init.config
 
 ifdef OUTPUT
 override OUTPUT = -DOUTPUT
@@ -5,11 +6,11 @@ endif
 
 # link objects(binaries) together
 heartwall: main.o ./AVI/avilib.o ./AVI/avimod.o 
-	nvcc -ccbin gcc-4.8 main.o ./AVI/avilib.o ./AVI/avimod.o -I/usr/local/cuda/include -lm -o heartwall
+	nvcc $(devId) $(FLAGSpecial) $(FLAGArch) main.o ./AVI/avilib.o ./AVI/avimod.o -I/usr/local/cuda/include -o heartwall
 
 # compile main function file into object (binary)
 main.o: main.cu kernel.cu define.c
-	nvcc -ccbin gcc-4.8 $(OUTPUT) $(KERNEL_DIM) main.cu -I./AVI -c -O3
+	nvcc $(devId) $(FLAGSpecial) $(FLAGArch) $(OUTPUT) $(KERNEL_DIM) main.cu -I./AVI -c -O3
 
 ./AVI/avilib.o ./AVI/avimod.o:
 	cd AVI; make;
