Modified the hotspot3D source code to execute in a specific GPU

--- a/src/rodinia/cuda/hotspot3D/Makefile
+++ b/src/rodinia/cuda/hotspot3D/Makefile
@@ -1,4 +1,5 @@
 include ../../common/make.config
+include ../../common/init.config
 
 CC := $(CUDA_DIR)/bin/nvcc
 
@@ -10,18 +11,18 @@ EXE = 3D
 
 OUTPUT = *.out
 
-FLAGS = -g -G -arch sm_35 -ccbin gcc-4.8 -lm 
+FLAGS = -g -G 
 release: $(SRC)
-	$(CC) $(KERNEL_DIM) $(FLAGS) $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
+	$(CC) $(devId) $(FLAGSpecial) $(FLAGArch) $(KERNEL_DIM) $(FLAGS) $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
 
 enum: $(SRC)
-	$(CC) $(KERNEL_DIM) $(FLAGS) -deviceemu $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
+	$(CC) $(devId) $(FLAGSpecial) $(FLAGArch) $(KERNEL_DIM) $(FLAGS) -deviceemu $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
 
 debug: $(SRC)
-	$(CC) $(KERNEL_DIM) $(FLAGS) -g $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
+	$(CC) $(devId) $(FLAGSpecial) $(FLAGArch) $(KERNEL_DIM) $(FLAGS) -g $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
 
 debugenum: $(SRC)
-	$(CC) $(KERNEL_DIM) $(FLAGS) -g -deviceemu $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
+	$(CC) $(devId) $(FLAGSpecial) $(FLAGArch) $(KERNEL_DIM) $(FLAGS) -g -deviceemu $(SRC) -o $(EXE) -I$(INCLUDE) -L$(CUDA_LIB_DIR) 
 
 clean: $(SRC)
 	rm -f $(EXE) $(EXE).linkinfo $(OUTPUT) 
