--- a/src/rodinia/cuda/lavaMD/makefile
+++ b/src/rodinia/cuda/lavaMD/makefile
@@ -1,4 +1,5 @@
 include ../../common/make.config
+include ../../common/init.config
 
 # Example
 # target: dependencies
@@ -12,13 +13,13 @@ ifdef OUTPUT
 override OUTPUT = -DOUTPUT
 endif
 
-C_C = gcc -D devId=0
+C_C = gcc $(devId)
 OMP_LIB = -lgomp
 OMP_FLAG = -fopenmp
 
 CUD_C = $(CUDA_DIR)/bin/nvcc
 # OMP_FLAG = 	-Xcompiler paste_one_here
-CUDA_FLAG = -arch sm_35 
+CUDA_FLAG = $(devId) $(FLAGSpecial) $(FLAGArch)
 
 # link objects (binaries) together
 a.out:		main.o \
