Modified the source code of pathFinder to execute in a specific GPU

--- a/src/rodinia/cuda/pathfinder/Makefile
+++ b/src/rodinia/cuda/pathfinder/Makefile
@@ -1,6 +1,7 @@
 include ../../common/make.config
+include ../../common/init.config
 
-CC := $(CUDA_DIR)/bin/nvcc
+CC := $(CUDA_DIR)/bin/nvcc $(devId) $(FLAGArch) # $(FLAGSpecial)
 INCLUDE := $(CUDA_DIR)/include
 
 SRC = pathfinder.cu
